--- a/Cronometro/index.html
+++ b/Cronometro/index.html
@@ -19,7 +19,7 @@
       </div>
       <div class="contenedor-botones">
         <button id="boton-inicio-pausa" class="boton iniciar"><i class="bi bi-play-fill"></i></button>
-        <button id="boton-reiniciar" class="boton"><i class="bi bi-pause-fill"></i></button>
+        <button id="boton-reiniciar" class="boton"><i class="bi bi-arrow-clockwise"></i></button>
       </div>
     </div>
   </main>
